--- a/style.css
+++ b/style.css
@@ -155,9 +155,10 @@ body {
   border: none;
   border-radius: 12px;
   cursor: pointer;
+  transition: background 0.3s ease;
 }
 .card_button:hover {
-  opacity: 0.8;
+  background-color: #2563eb;
 }
 .card_favorite {
   background: none;
